# play-with-rust

./: README.md
.github/workflows/: ms-prod.yml
projects/jira-cli/: Cargo.toml  README.md
projects/jira-cli/data/: db.json
projects/jira-cli/src/: db.rs  io_utils.rs  main.rs  models.rs  navigators.rs
projects/microservices-with-rust/: .dockerignore  Cargo.toml  Dockerfile-auth  Dockerfile-health  README.md  build.rs  docker-compose-ci.yaml  docker-compose.yaml
projects/microservices-with-rust/src/auth-service/: auth.rs  main.rs  sessions.rs  users.rs
projects/microservices-with-rust/src/client/: main.rs
projects/microservices-with-rust/src/health-check-service/: main.rs
projects/stack-overflow-apis/: .env  Cargo.toml  README.md
projects/stack-overflow-apis/docs/: Stack Overview Flow APIs.postman_collection.json
projects/stack-overflow-apis/src/: main.rs  models.rs
projects/stack-overflow-apis/src/handlers/: handlers_inner.rs  mod.rs
projects/stack-overflow-apis/src/persistance/: answers_dao.rs  questions_dao.rs
the-rust-programming-language/add/: Cargo.toml
the-rust-programming-language/adder/src/: lib.rs
the-rust-programming-language/adder/tests/: integration_test.rs
the-rust-programming-language/advanced_features/: Cargo.toml
the-rust-programming-language/advanced_features/src/: advanced_functions_and_closures.rs  advanced_macro.rs  advanced_traits.rs  (+3 more)
the-rust-programming-language/minigrep/: README.md
the-rust-programming-language/oop-features/: Cargo.toml
the-rust-programming-language/oop-features/blog_encoding_state/: Cargo.toml
the-rust-programming-language/oop-features/src/: characteristics_of_oop.rs  main.rs
the-rust-programming-language/smart_pointer/: Cargo.toml
the-rust-programming-language/testing-in-rust/: Cargo.toml
(+141 files in other folders)
