workspace = { members = [ "blog", "blog_encoding_state","gui"] }
[package]
name = "oop-features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gui = {path = "./gui"}
blog = {path = "./blog"}
blog_encoding_state = {path = "./blog_encoding_state"}
